# FeatureForge

./: .gitignore  __init__.py  pyproject.toml  requirements.txt
models/: _data_types.py  data_structure.py
profiling/: __init__.py  _base.py  _boolean_config.py  _boolean_profiler.py  _categorical.py  _categorical_config.py  _correlation_config.py  _correlation_profiler.py  _datetime_config.py  _datetime_profiler.py  _missingness_profiler.py  _numeric_config.py  _numeric_profiler.py  _tabular.py  _target_config.py  _target_profiler.py  _text_config.py  _text_profiler.py  _type_detector.py  base.py  categorical.py  categorical_config.py  config.py  correlation_profiler.py  datetime_profiler.py  missingness_config.py  missingness_profiler.py  numeric_config.py  numeric_profiler.py  structural.py  tabular.py  target_config.py  target_profiler.py  type_detector.py
src/dataforge_ml/: __init__.py
src/dataforge_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dataforge_ml/profiling/: __init__.py  _base.py  _boolean_profiler.py  _categorical.py  _correlation_config.py  _correlation_profiler.py  _missingness_config.py  _missingness_profiler.py  _numeric_config.py  _numeric_profiler.py  _tabular.py  _target_profiler.py  _text_profiler.py  _type_detector.py  config.py  structural.py
src/dataforge_ml/splitting/: __init__.py  _config.py  _splitter.py
src/dataforge_ml/utils/: data_loader.py
tests/: conftest.py
tests/integration/: conftest.py  test_structural_end_to_end.py
tests/unit/profiling/: conftest.py  test_boolean_profiler.py  (+8 more)
(+1 files in other folders)
