[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "FeatureForge"
version = "0.1.0"
description = "A automated feature engineering and designing pipeline library"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.10.0",
    "numpy>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
